2006-01-08  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h, itpp/base/vec.h: Fixed bug [1399822]. The
	problem was caused by explicit specialisation of some templated
	operators, when HAVE_CBLAS or HAVE_MKL are defined. In such a
	case, the following forward declarations of explicit
	instantiations (with extern) of these operators should be switched
	off.

2006-01-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/itbase.h, itpp/base/lapack.h, itpp/base/schur.cpp,
	itpp/base/schur.h, itpp/base/sources.mk, tests/Makefile.am,
	tests/schur_test.cpp, tests/schur_test.ref: Implemented Schur
	decomposition functions for real and complex matrices using
	LAPACK's DGEES and ZGEES routines. Test file prepared as well.

2006-01-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/images/favicon.ico, doc/images/Makefile.am, 
	doc/local/itpp_header.html, doc/Makefile.am: Added IT++ favicon

2006-01-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* extras/itsave.m: Fixed bug [1396020]. Now itsave() works properly
	in both Matlab and Octave. Thanks to Jordy Potman for providing a
	patch.

2006-01-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* autogen.sh: Reordering of the invoked commands

2005-12-29  Adam Piatyszek  <ediap@users.sourceforge.net>

	* NEWS, configure.ac, doc/local/index.doc.in: Updated for the
	future release

	* itpp.spec.in: Minor fixes

==============================================================================

2005-12-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.9.0 released (CVS tag: release-3-9-0)

2005-12-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h, itpp/base/vec.h: Added a `value_type' typedef,
	which provides a similar notation to the std::vector<> class.
	Requested by Christian Stimming in patch report [1387075].

	* doc/local/index.doc.in: `https://' links changed to `http://'
	ones

	* itpp/base/parser.cpp: Implemented feature request [1167378]. An